# kana-what

./: .gitignore  Cargo.toml  flake.nix  index.html  license.md  package.json  pnpm-lock.yaml  postcss.config.js  readme.md
app/: Cargo.toml
app/src/: lib.rs
end2end/tests/: example.spec.ts
frontend/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
src/: card.rs  main.rs
style/: main.css
