[package]
name = "kana-what"
version = "0.1.0"
edition = "2021"
resolver = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[dependencies]
leptos = { version = "0.8.5", features = ["nightly", "csr"] }
leptos_meta = { version = "0.8.5" }
leptos_router = { version = "0.8.5", features = ["nightly"] }
leptos-use = { version = "0.18.0", features = ["storage"] }

console_error_panic_hook = "0.1.7"
wasm-bindgen = "=0.2.100"

leptos_icons = { version = "0.7.0" }
icondata = "0.7.0"

fixedstr = { version = "0.5.10", features = ["serde"] }
rs-fsrs = { version = "1.2.1", features = ["serde"] }
